tests/neg/i0281-null-primitive-conforms.scala
object test {
  val b: scala.Boolean = null
  val c: Unit = null
  val d: Float = null
  val e: AnyVal = null
}
